--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Green Vibes</title>
     <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <section class="header">
+        <nav>
+            <a href="index.html">Green Vibes</a>
+            <div class="nav-links">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Services</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+<div class="text-box">
+    <h1>Jual Tanaman Hias Beragam dengan Harga Murah</h1>
+    <p>Tanaman hias menjadi salah satu pilihan agar bisa menambah estetika ruangan. Akan tetapi ketika akan memberikan akses <br>tanaman tersebut pilih jenis tanaman hias yang asli dibandingkan artificial.</p>
+    <a href="" class="hero-btn">Visit Us To know More</a>
+</div>
+    </section>
     
 </body>
 </html>
