--- a/index.html
+++ b/index.html
@@ -27,9 +27,35 @@
 <div class="text-box">
     <h1>Jual Tanaman Hias Beragam dengan Harga Murah</h1>
     <p>Tanaman hias menjadi salah satu pilihan agar bisa menambah estetika ruangan. Akan tetapi ketika akan memberikan akses <br>tanaman tersebut pilih jenis tanaman hias yang asli dibandingkan artificial.</p>
-    <a href="" class="hero-btn">Visit Us To know More</a>
+    <a href="" class="hero-btn">Tentang Kami</a>
 </div>
     </section>
-    
+
+<!---- About ---->
+
+<section class="about">
+    <h1>#TanamanUntukSemuaRuang</h1>
+
+    <div class="row">
+        <div class="about-col">
+            <h3>Sampaikan Kebutuhan Anda</h3>
+            <p>Sampaikan kebutuhan Anda melalui WhatsApp atau email. Tim kami akan menghubungi Anda untuk melakukan konsultasi.</p>
+        </div>
+         <div class="about-col">
+            <h3>Pilih Jenis Tanaman & Rekomendasi</h3>
+            <p>Pilih tanaman yang Anda inginkan dan dapatkan rekomendasi dari tim kami untuk menentukan instalasi yang tepat bagi ruangan Anda.</p>
+        </div>
+         <div class="about-col">
+            <h3>Mulai berlangganan</h3>
+            <p>Sesuaikan biaya dan rencana pembayaran untuk mulai berlangganan. Selamat menikmati ruangan yang lebih segar!</p>
+        </div>
+         <div class="about-col">
+            <h3>Nikmati suasana yang lebih nyaman!</h3>
+            <p>Untuk memastikan tanaman selalu dalam keadaan baik, tim kami akan melakukan pemeliharaan ke lokasi Anda secara berkala.</p>
+        </div>
+
+    </div>
+</section>
+
 </body>
 </html>
