--- a/index.html
+++ b/index.html
@@ -57,5 +57,32 @@
     </div>
 </section>
 
+<!---- Services ---->
+<section class="services">
+    <h1>Ingin mewujudkan kebutuhan tanaman yang lebih spesifik?</h1>
+    <p>Green Vibes menyediakan beragam layanan tanaman indoor sesuai permintaan Anda. <br>Konsultasikan pada tim ahli kami sekarang.</p>
+
+    <div class="row">
+        <div class="services-col">
+            <img src="images/taman 1.jpg">
+            <div class="layer">
+                <h3>Penyedia Tanaman untuk Desain Interior</h3>
+            </div>
+        </div>
+        <div class="services-col">
+            <img src="images/taman 2.jpg">
+            <div class="layer">
+                <h3>Desain dan Pembuatan Taman</h3>
+            </div>
+        </div>
+        <div class="services-col">
+            <img src="images/Kebun.avif">
+            <div class="layer">
+                <h3>Penghijauan dalam Gedung</h3>
+            </div>
+        </div>
+    </div>
+</section>
+
 </body>
 </html>
