--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 </section>
 
 <!---- Services ---->
+
 <section class="services">
     <h1>Ingin mewujudkan kebutuhan tanaman yang lebih spesifik?</h1>
     <p>Green Vibes menyediakan beragam layanan tanaman indoor sesuai permintaan Anda. <br>Konsultasikan pada tim ahli kami sekarang.</p>
@@ -83,6 +84,38 @@
         </div>
     </div>
 </section>
+
+
+<!----- Products ---->
+<section class="products">
+    <h1>Hadirkan beragam tanaman berkualitas tinggi untuk keperluan bisnis Anda</h1>
+    <p>Temukan beragam jenis tanaman indoor berkualitas dari katalog kami yang sesuai dengan kondisi ruangan Anda. <br>Gratis biaya pengiriman dan pemasangan untuk semua pembelian paket.</p>
+
+    <div class="row">
+        <div class="products-col">
+            <img src="images/gambar 2.jpg" width="300px">
+            <h5>FLOOR PLANT</h5>
+            <p>Calathea Medallion Plant</p>
+        </div>
+        <div class="products-col">
+            <img src="images/gambar 4.jpg" width="308px">
+            <h5>FLOOR PLANT</h5>
+            <p>Ruffled Leaf Palm Plant</p>
+        </div>
+        <div class="products-col">
+            <img src="images/Gambar 1.jpg" width="300px"> 
+            <h5>TABLE PLANT</h5>
+            <p>Watermelon Peperomia Plant</p>
+        </div>
+        <div class="products-col">
+            <img src="images/gambar 3.jpg" width="253px">
+            <h5>FLOOR PLANT</h5>
+            <p>Cylinder Snake Plant</p>
+        </div>
+    </div>
+
+</section>
+
 
 </body>
 </html>
