--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
 
 <!----- Products ---->
+
 <section class="products">
     <h1>Hadirkan beragam tanaman berkualitas tinggi untuk keperluan bisnis Anda</h1>
     <p>Temukan beragam jenis tanaman indoor berkualitas dari katalog kami yang sesuai dengan kondisi ruangan Anda. <br>Gratis biaya pengiriman dan pemasangan untuk semua pembelian paket.</p>
@@ -113,7 +114,15 @@
             <p>Cylinder Snake Plant</p>
         </div>
     </div>
+</section>
 
+
+<!---- Contact ---->
+
+<section class="contact">
+    <h1>Puluhan tanaman indoor pilihan dengan kualitas terbaik. <br>
+    Pelajari lebih lanjut bagaimana kami dapat mendukung kebutuhan tanaman Anda</h1>
+    <a href="" class="hero-btn">CONTACT US</a>
 </section>
 
 
