--- a/index.html
+++ b/index.html
@@ -125,6 +125,15 @@
     <a href="" class="hero-btn">CONTACT US</a>
 </section>
 
+<!---- Footer ---->
+
+<section class="footer">
+    <h4>About Us</h4>
+    <p>© 2024 Green Vibes. All rights reserved.<br>
+    Jalan Kunti 1, Bali, Badung, 448822 <br>
+    Phone: (123) 456-7890 | Email: greenvibes.com <br>
+    Kebijakan Privasi | Syarat dan Ketentuan | Peta Situs </p>
+</section>
 
 </body>
 </html>
