--- a/about.html
+++ b/about.html
@@ -16,9 +16,9 @@
             <a href="index.html">Green Vibes</a>
             <div class="nav-links">
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Services</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
                     <li><a href="">Products</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
