--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <li><a href="">Products</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
