Menambahkan contact page

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="subbb-header">
+    <section class="subbbb-header">
         <nav>
             <a href="index.html">Green Vibes</a>
             <div class="nav-links">
@@ -27,34 +27,12 @@
         </nav>
     </section>
 
-<!----- Products ---->
+<!---- Contact ---->
 
-<section class="products">
-    <h1>Hadirkan beragam tanaman berkualitas tinggi untuk keperluan bisnis Anda</h1>
-    <p>Temukan beragam jenis tanaman indoor berkualitas dari katalog kami yang sesuai dengan kondisi ruangan Anda. <br>Gratis biaya pengiriman dan pemasangan untuk semua pembelian paket.</p>
-
-    <div class="row">
-        <div class="products-col">
-            <img src="images/gambar 2.jpg" width="300px">
-            <h5>FLOOR PLANT</h5>
-            <p>Calathea Medallion Plant</p>
-        </div>
-        <div class="products-col">
-            <img src="images/gambar 4.jpg" width="308px">
-            <h5>FLOOR PLANT</h5>
-            <p>Ruffled Leaf Palm Plant</p>
-        </div>
-        <div class="products-col">
-            <img src="images/Gambar 1.jpg" width="300px"> 
-            <h5>TABLE PLANT</h5>
-            <p>Watermelon Peperomia Plant</p>
-        </div>
-        <div class="products-col">
-            <img src="images/gambar 3.jpg" width="253px">
-            <h5>FLOOR PLANT</h5>
-            <p>Cylinder Snake Plant</p>
-        </div>
-    </div>
+<section class="contact">
+    <h1>Puluhan tanaman indoor pilihan dengan kualitas terbaik. <br>
+    Pelajari lebih lanjut bagaimana kami dapat mendukung kebutuhan tanaman Anda</h1>
+    <a href="" class="hero-btn">CONTACT US</a>
 </section>
 
 <!---- Footer ---->
